[gd_scene load_steps=7 format=3 uid="uid://fk5ufucu336g"]

[ext_resource type="Script" path="res://ui/menus/parameters/parameters.gd" id="1_lonfr"]
[ext_resource type="Script" path="res://ui/menus/templates/button/my_button.gd" id="2_gnp5s"]
[ext_resource type="Script" path="res://ui/menus/templates/button/my_menu_button.gd" id="4_n7mte"]
[ext_resource type="Script" path="res://ui/menus/parameters/quit_display.gd" id="4_xhodx"]
[ext_resource type="Script" path="res://ui/menus/templates/button/my_check_box.gd" id="5_60q8c"]
[ext_resource type="PackedScene" uid="uid://dioyg4xr3jcmc" path="res://ui/menus/templates/choice/control_choice.tscn" id="7_gyx2t"]

[node name="Parameters" type="CanvasLayer" node_paths=PackedStringArray("section_buttons", "bot_container", "section_contents", "quit_display", "game_content", "languages_value", "display_content", "display_screen_value", "display_mode_value", "resolution_value", "anchor_value", "v_sync_value", "framerate_limit_value", "show_framerate_value", "constrain_mouse_value", "audio_content", "controls_content", "game", "display", "audio", "controls", "back_to_menu", "back", "abandon")]
process_mode = 3
layer = 10
script = ExtResource("1_lonfr")
section_buttons = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/SectionButtons")
bot_container = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/BotContainer")
section_contents = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents")
quit_display = NodePath("QuitDisplay")
game_content = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/GameContent")
languages_value = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/GameContent/HParamLanguages/LanguagesValue")
display_content = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent")
display_screen_value = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamDisplayScreen/DisplayScreenValue")
display_mode_value = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamDisplayMode/DisplayModeValue")
resolution_value = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamResolution/ResolutionValue")
anchor_value = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamAnchor/AnchorValue")
v_sync_value = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamV-Sync/V-syncValue")
framerate_limit_value = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamFramerateLimit/FramerateLimitValue")
show_framerate_value = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamShowFramerate/ShowFramerateValue")
constrain_mouse_value = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamConstrainMouse/ConstrainMouseValue")
audio_content = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/AudioContent")
controls_content = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/ControlsContent")
game = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/SectionButtons/Game")
display = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/SectionButtons/Display")
audio = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/SectionButtons/Audio")
controls = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/SectionButtons/Controls")
back_to_menu = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/BotContainer/BackToMenu")
back = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/BotContainer/Back")
abandon = NodePath("ParametersDisplay/MarginContainer/ParametersContainer/BotContainer/Abandon")

[node name="BackGround" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="BackGround"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0235294, 0.054902, 0.945098)

[node name="ParametersDisplay" type="Control" parent="."]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="RootPanelContainer" type="PanelContainer" parent="ParametersDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"back_ground"

[node name="MarginContainer" type="MarginContainer" parent="ParametersDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="ParametersContainer" type="VBoxContainer" parent="ParametersDisplay/MarginContainer"]
layout_mode = 2

[node name="SectionButtons" type="HBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Game" type="Button" parent="ParametersDisplay/MarginContainer/ParametersContainer/SectionButtons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_type_variation = &"MyButton"
text = "GAME"
script = ExtResource("2_gnp5s")

[node name="Display" type="Button" parent="ParametersDisplay/MarginContainer/ParametersContainer/SectionButtons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_type_variation = &"MyButton"
text = "DISPLAY"
script = ExtResource("2_gnp5s")

[node name="Audio" type="Button" parent="ParametersDisplay/MarginContainer/ParametersContainer/SectionButtons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_type_variation = &"MyButton"
text = "AUDIO"
script = ExtResource("2_gnp5s")

[node name="Controls" type="Button" parent="ParametersDisplay/MarginContainer/ParametersContainer/SectionButtons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_type_variation = &"MyButton"
text = "CONTROLS"
script = ExtResource("2_gnp5s")

[node name="ScrollContainer" type="ScrollContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SectionContents" type="PanelContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_type_variation = &"container"

[node name="GameContent" type="VBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 26

[node name="HParamLanguages" type="HBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/GameContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LanguagesLabel" type="Label" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/GameContent/HParamLanguages"]
layout_mode = 2
size_flags_horizontal = 3
text = "LANGUAGES"

[node name="LanguagesValue" type="MenuButton" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/GameContent/HParamLanguages"]
layout_mode = 2
size_flags_horizontal = 3
text = "dummy "
script = ExtResource("4_n7mte")

[node name="DisplayContent" type="VBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 26

[node name="HParamDisplayScreen" type="HBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DisplayScreenLabel" type="Label" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamDisplayScreen"]
layout_mode = 2
size_flags_horizontal = 3
text = "DISPLAY_SCREEN"

[node name="DisplayScreenValue" type="MenuButton" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamDisplayScreen"]
layout_mode = 2
size_flags_horizontal = 3
text = "dummy "
script = ExtResource("4_n7mte")

[node name="HParamDisplayMode" type="HBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DisplayModeLabel" type="Label" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamDisplayMode"]
layout_mode = 2
size_flags_horizontal = 3
text = "DISPLAY_MODE"

[node name="DisplayModeValue" type="MenuButton" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamDisplayMode"]
layout_mode = 2
size_flags_horizontal = 3
text = "dummy"
script = ExtResource("4_n7mte")

[node name="HParamResolution" type="HBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResolutionLabel" type="Label" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamResolution"]
layout_mode = 2
size_flags_horizontal = 3
text = "RESOLUTION"

[node name="ResolutionValue" type="MenuButton" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamResolution"]
layout_mode = 2
size_flags_horizontal = 3
text = "dummy"
script = ExtResource("4_n7mte")

[node name="HParamAnchor" type="HBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AnchorLabel" type="Label" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamAnchor"]
layout_mode = 2
size_flags_horizontal = 3
text = "ANCHOR"

[node name="AnchorValue" type="MenuButton" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamAnchor"]
layout_mode = 2
size_flags_horizontal = 3
text = "dummy"
icon_alignment = 1
script = ExtResource("4_n7mte")

[node name="HParamV-Sync" type="HBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="V-syncLabel" type="Label" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamV-Sync"]
layout_mode = 2
size_flags_horizontal = 3
text = "V_SYNC"

[node name="V-syncValue" type="MenuButton" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamV-Sync"]
layout_mode = 2
size_flags_horizontal = 3
text = "dummy"
script = ExtResource("4_n7mte")

[node name="HParamFramerateLimit" type="HBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FramerateLimitLabel" type="Label" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamFramerateLimit"]
layout_mode = 2
size_flags_horizontal = 3
text = "FRAMERATE_LIMIT"

[node name="FramerateLimitValue" type="MenuButton" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamFramerateLimit"]
layout_mode = 2
size_flags_horizontal = 6
text = "dummy"
script = ExtResource("4_n7mte")

[node name="HParamShowFramerate" type="HBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShowFramerateLabel" type="Label" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamShowFramerate"]
layout_mode = 2
size_flags_horizontal = 3
text = "SHOW_FRAMERATE"

[node name="ShowFramerateValue" type="CheckBox" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamShowFramerate"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
alignment = 1
script = ExtResource("5_60q8c")

[node name="HParamConstrainMouse" type="HBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConstrainMouseLabel" type="Label" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamConstrainMouse"]
layout_mode = 2
size_flags_horizontal = 3
text = "CONSTRAIN_MOUSE"

[node name="ConstrainMouseValue" type="CheckBox" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamConstrainMouse"]
layout_mode = 2
size_flags_horizontal = 6
icon_alignment = 1
script = ExtResource("5_60q8c")

[node name="AudioContent" type="VBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 26

[node name="ControlsContent" type="VBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 26

[node name="BotContainer" type="HBoxContainer" parent="ParametersDisplay/MarginContainer/ParametersContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 200

[node name="BackToMenu" type="Button" parent="ParametersDisplay/MarginContainer/ParametersContainer/BotContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"MyButton"
text = "BACK_TO_MENU"
script = ExtResource("2_gnp5s")

[node name="Back" type="Button" parent="ParametersDisplay/MarginContainer/ParametersContainer/BotContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"MyButton"
text = "BACK"
script = ExtResource("2_gnp5s")

[node name="Abandon" type="Button" parent="ParametersDisplay/MarginContainer/ParametersContainer/BotContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"MyButton"
text = "ABANDON"
script = ExtResource("2_gnp5s")

[node name="QuitDisplay" type="Control" parent="." node_paths=PackedStringArray("choice")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_xhodx")
choice = NodePath("ChoiceLabel")

[node name="ChoiceLabel" parent="QuitDisplay" instance=ExtResource("7_gyx2t")]
layout_mode = 1

[connection signal="button_down" from="ParametersDisplay/MarginContainer/ParametersContainer/SectionButtons/Game" to="." method="_on_game_button_down"]
[connection signal="button_down" from="ParametersDisplay/MarginContainer/ParametersContainer/SectionButtons/Display" to="." method="_on_display_button_down"]
[connection signal="button_down" from="ParametersDisplay/MarginContainer/ParametersContainer/SectionButtons/Audio" to="." method="_on_audio_button_down"]
[connection signal="button_down" from="ParametersDisplay/MarginContainer/ParametersContainer/SectionButtons/Controls" to="." method="_on_controls_button_down"]
[connection signal="about_to_popup" from="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamDisplayScreen/DisplayScreenValue" to="." method="_on_display_screen_value_about_to_popup"]
[connection signal="button_down" from="ParametersDisplay/MarginContainer/ParametersContainer/ScrollContainer/SectionContents/DisplayContent/HParamAnchor/AnchorValue" to="." method="_on_anchor_value_button_down"]
[connection signal="button_down" from="ParametersDisplay/MarginContainer/ParametersContainer/BotContainer/BackToMenu" to="." method="_on_back_to_menu_button_down"]
[connection signal="button_down" from="ParametersDisplay/MarginContainer/ParametersContainer/BotContainer/Back" to="." method="_on_back_button_down"]
[connection signal="button_down" from="ParametersDisplay/MarginContainer/ParametersContainer/BotContainer/Abandon" to="." method="_on_abandon_button_down"]
